result/avra.txt
smatch check :
/home/lsc20011130/CTestRobot/projects/avra/src/directiv.c:838 parse_db() error: uninitialized symbol 'i'.
/home/lsc20011130/CTestRobot/projects/avra/src/expr.c:556 get_expr() warn: overwrite may leak 'element'
/home/lsc20011130/CTestRobot/projects/avra/src/macro.c:196 read_macro() warn: this array is probably non-NULL. 'pi->fi->buff'
/home/lsc20011130/CTestRobot/projects/avra/src/macro.c:438 expand_macro() error: we previously assumed 'macro_call' could be null (see line 421)
/home/lsc20011130/CTestRobot/projects/avra/src/parser.c:272 parse_line() warn: possible memory leak of 'label'

cppcheck:
/home/lsc20011130/CTestRobot/projects/avra/src/coff.c:1733:23: error: Shifting 32-bit value by 56 bits is undefined behaviour [shiftTooManyBits]
   if (!(Test & (0xff << (i * 8))))
                      ^
/home/lsc20011130/CTestRobot/projects/avra/src/coff.c:1733:23: error: Signed integer overflow for expression '255<<(i*8)'. [integerOverflow]
   if (!(Test & (0xff << (i * 8))))
                      ^
/home/lsc20011130/CTestRobot/projects/avra/src/parser.c:199:15: error: Uninitialized variable: temp [uninitvar]
  if (strncmp(temp,".stabs ",7) == 0) {  /* compiler output is always lower case */
              ^
